--- a/src/Presentation/Nop.Web/Administration/Content/styles.rtl.css
+++ b/src/Presentation/Nop.Web/Administration/Content/styles.rtl.css
@@ -123,40 +123,45 @@ ul.common-list {
 }
 
 /*PANELS*/
-.panel-dark-blue {
-    border-color: #487eb5;
+.panel-violet {
+    border-color: #806cbe;
 }
-.panel-dark-blue>.panel-heading {
+.panel-violet>.panel-heading {
     color: #fff;
-    background-color: #487eb5;
-    border-color: #487eb5;
+    background-color: #806cbe;
+    border-color: #806cbe;
 }
-.panel-light-blue {
+.panel-green {
     border-color: #60bab6;
 }
-.panel-light-blue>.panel-heading {
+.panel-green>.panel-heading {
     color: #fff;
     background-color: #60bab6;
     border-color: #60bab6;
 }
+.panel-blue {
+    border-color: #487eb5;
+}
+.panel-blue>.panel-heading {
+    color: #fff;
+    background-color: #487eb5;
+    border-color: #487eb5;
+}
 
 /*DISCOUNT*/
-.requirement-container .panel-dark-blue{
+.requirement-container .panel-violet{
     border-right-width: 5px;
 }
-.requirement-container .panel-dark-blue>.panel-heading{
+.requirement-container .panel-violet>.panel-heading{
     border-top-right-radius: 0;
 }
-.requirement-container .panel-dark-blue .panel-dark-blue>.panel-body{
-    background-color: #e7f3ff;
-}
-.requirement-container .panel-light-blue{
-    border-right-width: 2px;
+.requirement-container .panel-violet .panel-violet>.panel-body{
+    background-color: #eee9ff;
 }
 .requirement-container .panel-light-blue>.panel-heading{
     border-top-right-radius: 0;
 }
-.requirement-container .panel-light-blue>.panel-body{
+.requirement-container .panel-green>.panel-body{
     background-color: #edfffe;
 }
 .requirement-container .panel-group .panel.panel-light-blue+.panel {
@@ -168,12 +173,15 @@ ul.common-list {
     color: #fff;
     float: left;
 }
+.requirement-container .panel-heading .btn-link .fa{
+    padding-left: 0 !important;
+}
 .requirement-container .iteraction-type {
     width: 100px;
     margin: 10px 0;
 }
-.panel-add-requirement {
-    
+.panel-add-requirement{
+    margin-top: 20px;
 }
 
 /*MODAL WINDOWS*/
