--- a/src/Presentation/Nop.Web/Administration/Views/Setting/Order.cshtml
+++ b/src/Presentation/Nop.Web/Administration/Views/Setting/Order.cshtml
@@ -281,27 +281,27 @@
                 </div>
                 <div class="form-group advanced-setting" id="pnlCustomOrderNumberPrefix">
                     <div class="col-md-3">
-                        @Html.OverrideStoreCheckboxFor(model => model.CustomOrderNumberPrefix_OverrideForStore, model => model.CustomOrderNumberPrefix, Model.ActiveStoreScopeConfiguration)
-                        @Html.NopLabelFor(model => model.CustomOrderNumberPrefix)
+                        @Html.OverrideStoreCheckboxFor(model => model.CustomOrderNumberMask_OverrideForStore, model => model.CustomOrderNumberMask, Model.ActiveStoreScopeConfiguration)
+                        @Html.NopLabelFor(model => model.CustomOrderNumberMask)
                     </div>
                     <div class="col-md-9">
-                        @Html.NopEditorFor(model => model.CustomOrderNumberPrefix)
-                        @Html.ValidationMessageFor(model => model.CustomOrderNumberPrefix)
+                        @Html.NopEditorFor(model => model.CustomOrderNumberMask)
+                        @Html.ValidationMessageFor(model => model.CustomOrderNumberMask)
                         <ul class="common-list">
                             <li>
-                                @T("Admin.Configuration.Settings.Order.CustomOrderNumberPrefix.Description.YYYY")
+                                @T("Admin.Configuration.Settings.Order.CustomOrderNumberMask.Description.YYYY")
                             </li>
                             <li>
-                                @T("Admin.Configuration.Settings.Order.CustomOrderNumberPrefix.Description.YY")
+                                @T("Admin.Configuration.Settings.Order.CustomOrderNumberMask.Description.YY")
                             </li>
                             <li>
-                                @T("Admin.Configuration.Settings.Order.CustomOrderNumberPrefix.Description.MM")
+                                @T("Admin.Configuration.Settings.Order.CustomOrderNumberMask.Description.MM")
                             </li>
                             <li>
-                                @T("Admin.Configuration.Settings.Order.CustomOrderNumberPrefix.Description.DD")
+                                @T("Admin.Configuration.Settings.Order.CustomOrderNumberMask.Description.DD")
                             </li>
                             <li>
-                                @T("Admin.Configuration.Settings.Order.CustomOrderNumberPrefix.Description.ID")
+                                @T("Admin.Configuration.Settings.Order.CustomOrderNumberMask.Description.ID")
                             </li>
                         </ul>
                     </div>
